--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ footer {
   border-style: solid;
   border-width: 2px;
   border-color: var(--baby-powder);
-  transition-duration: 0.75s;
+  transition: opacity 0.75s;
 }
 #name {
   transition-duration: 0.75s;
@@ -52,6 +52,9 @@ footer {
 
 #projects-container {
   transition-duration: 0.75s;
+}
+#project-title {
+  text-align: center;
 }
 
 .links {
@@ -83,7 +86,4 @@ footer {
 .project-info {
   color: var(--baby-powder);
   text-decoration: none;
-}
-#project-title {
-  text-align: center;
 }
